# tun-rs

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml  test_split_to
.cargo/: config.toml
.github/workflows/: rust.yml
.mimocode/plans/: 1782908954168-happy-tiger.md
benches/: bytescodec_decode.rs  bytescodec_memory.rs  bytescodec_reserve.rs  bytescodec_reuse.rs  io_hot_paths.rs
docs/: iOS-Integration.md
examples/: async_ping.rs  async_ping_framed.rs  async_tap.rs  dual_runtime.rs  named_tun.rs  ping_offload.rs  read.rs  read_interruptible.rs  read_timeout.rs  sync_io_uring_ping.rs  test_getifaddrs_api.rs  write.rs
examples/protocol_handle/: mod.rs
src/: builder.rs  lib.rs
src/async_device/: async_framed.rs  mod.rs
src/async_device/macos/: mod.rs  select_io.rs
src/async_device/unix/: async_io.rs  async_std.rs  mod.rs  tokio.rs
src/async_device/windows/: mod.rs
src/platform/: mod.rs
src/platform/android/: mod.rs
src/platform/apple/: mod.rs
src/platform/freebsd/: device.rs  sys.rs
src/platform/ios/: device.rs  mod.rs
src/platform/linux/: checksum.rs  device.rs  io_uring.rs  mod.rs  offload.rs  sys.rs
src/platform/macos/: device.rs  mod.rs  sys.rs  tuntap.rs
src/platform/macos/tap/: mod.rs
src/platform/netbsd/: device.rs  mod.rs  sys.rs
src/platform/openbsd/: device.rs  sys.rs
src/platform/unix/: device.rs  fd.rs  interrupt.rs  mod.rs  sockaddr.rs  tun.rs
src/platform/windows/: device.rs  dns.rs  ffi.rs  interrupt.rs  mod.rs  netsh.rs
src/platform/windows/tap/: iface.rs  mod.rs  overlapped.rs
src/platform/windows/tun/: adapter.rs  adapter_win7.rs  bindings_i686.rs  bindings_x86_64.rs  mod.rs  wintun_functions.h  wintun_log.rs  wintun_raw.rs
tests/: test_dev.rs  test_dual_runtime.rs
